# ChangeLog for dev-java/rhino
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/ChangeLog,v 1.47 2007/02/18 10:00:25 nixnut Exp $

  18 Feb 2007; nixnut <nixnut@gentoo.org> rhino-1.6.1-r3.ebuild:
  Stable on ppc wrt bug 166700

  14 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  rhino-1.5.5-r4.ebuild, rhino-1.6.1-r3.ebuild:
  stable x86; bug 166700

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> rhino-1.5.5-r4.ebuild,
  rhino-1.6.1-r3.ebuild:
  Added ~ppc64 to 1.6.1-r3 and marked 1.5.5-r4 stable on ppc64; bug #166700

  13 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  rhino-1.5.5-r2.ebuild, rhino-1.5.5-r4.ebuild, rhino-1.6.1-r2.ebuild,
  rhino-1.6.1-r3.ebuild:
  Cleanup.

  13 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> -rhino-1.5.5-r1.ebuild,
  -rhino-1.5.5-r3.ebuild, -rhino-1.6.1-r1.ebuild:
  Removed unused versions.

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> rhino-1.6.1-r3.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> rhino-1.5.5-r1.ebuild,
  rhino-1.5.5-r2.ebuild, rhino-1.5.5-r3.ebuild, rhino-1.5.5-r4.ebuild,
  rhino-1.6.1-r1.ebuild, rhino-1.6.1-r2.ebuild, rhino-1.6.1-r3.ebuild:
  Dropping sparc keywords, see #96229

*rhino-1.5.5-r4 (04 Oct 2006)

  04 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/public-NativeScript.patch, +rhino-1.5.5-r4.ebuild:
  Merged changes with gcj-overlay, bug #145769.

  11 Sep 2006; Joshua Nichols <nichoj@gentoo.org> rhino-1.5.5-r3.ebuild:
  Added ~ia64 keywords.

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> rhino-1.5.5-r3.ebuild:
  Add ~x86-fbsd keyword.

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> rhino-1.5.5-r3.ebuild,
  rhino-1.6.1-r3.ebuild:
  ant_src_unpack -> src_unpack

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org> rhino-1.5.5-r3.ebuild,
  rhino-1.6.1-r3.ebuild:
  Added java-ant-2 to inherit.
